--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/alissondiniz20/API-Node-SOLID#readme",
   "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "18.15.11",
     "prisma": "4.14.1",
     "tsup": "6.7.0",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "@prisma/client": "4.14.1",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.0.3",
     "fastify": "4.15.0",
     "zod": "3.21.4"
