--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/node": "18.15.11",
+    "@vitest/coverage-v8": "0.33.0",
     "prisma": "4.14.1",
     "tsup": "6.7.0",
     "tsx": "3.12.6",
